--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,7 +19,9 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.3",
+    "multer": "^2.0.1",
     "nodemon": "^3.1.10",
+    "stripe": "^18.2.1",
     "validator": "^13.15.0"
   }
 }
